--- a/source/_posts/深入理解闭包中的委托.md
+++ b/source/_posts/深入理解闭包中的委托.md
@@ -1,7 +1,7 @@
 ---
 title: 深入理解闭包中的委托
 date: 2017-12-06 09:07:14
-tags: 构建工具
+tags: Groovy
 ---
 
 关于闭包的使用在[官方文档](http://groovy-lang.org/closures.html)中已经说明的很清楚了，这里再对闭包的委托机制进行说明，该机制对于 Groovy 开发，gradle 脚本编写非常重要！
