add source file

--- a/source/_posts/理解各种字符编码.md
+++ b/source/_posts/理解各种字符编码.md
@@ -16,15 +16,15 @@ tags: 理解计算机
 <!--more-->
 
 # ASCII
-计算机是美国人发明的，英语单词使用 26 个字母组合就可以表达了，在加上其对应的大写字母，`0~9`的数组，已经一些运算符号，只需 100 个左右的字符就就可以完全的表达说英语的国家的需求了，所以美国在设计的时候使用了 1 个 byte，也就是 8bit 的后 7 位，最高位恒为 0，这样就可以用`0~127`的序号和 128 个字符一一对应了，这就是标准的 ASCII(American Standard Code for Information Interchange，美国信息交换标准代码)
+计算机是美国人发明的，英语单词使用 26 个字母组合就可以表达了，在加上其对应的大写字母，`0~9`的数组，以及一些运算符号，只需 100 个左右的字符就就可以完全的表达说英语的国家的需求了，所以美国在设计的时候使用了 1 个 byte，也就是 8bit 的后 7 位，最高位恒为 0，这样就可以用`0~127`的序号与 128 个字符一一对应了，这就是标准的 ASCII(American Standard Code for Information Interchange，美国信息交换标准代码)
 
-本来使用标准的 ASCII 字符编码就已经能够满足美国人的需求了。但是随着计算机的普及，欧洲的一些发达国家也开始使用计算机了。但是这就出现了一个问题，像德国，法国等这些国家的文字很多字符是 ASCII 中没有的，但是像基本的数字，标点符号等这些通用的，又已经存在与 ASCII 中，也是他们所需要的，这时有人想出了一个方法，就是扩展 ASCII，因为美国人只使用了一个字节的后 7 位，如果现在把最高位也用上，那么可表示的范围就从 0~127 扩展为 0~255 了，整整多出了 128 个字符。而之前`0~127`依然保持原来的含义，在`128~255`中，加入这些国家的所需的字符，就可以满足他们的需求了。但是注意：此时扩展后的 ASCII 已经不再是标准 ASCII 字符集了，而称为扩展 ASCII 字符集。扩展 ASCII 字符集并不是一个国际通用的标准，而是一个各自国家使用的标准，比如：编码为 130 的字符，在法语编码中代表了`é`，在希伯来语编码中却代表了字母`ג`等。当然`0~127`所表示的含义还是标准 ASCII 中定义的。只不过扩展 ASCII 编码成为了当时一些国家自己的标准。在一段时间内，大家都各自做各自的工作，相安无事。
+本来使用标准的 ASCII 字符编码就已经能够满足美国人的需求了。但是随着计算机的普及，欧洲的一些发达国家也开始使用计算机了。这就出现了一个问题，像德国，法国等这些国家的文字很多字符是 ASCII 中没有的，而像基本的数字，标点符号等这些通用的，又已经存在于 ASCII 中，也是他们所需要的，这时有人想出了一个方法，就是扩展 ASCII，因为美国人只使用了一个字节的后 7 位，如果现在把最高位也用上，那么可表示的范围就从 0~127 扩展为 0~255 了，整整多出了 128 个字符。而之前`0~127`依然保持原来的含义，在`128~255`中，加入这些国家的所需的字符，就可以满足他们的需求了。但是注意：此时扩展后的 ASCII 已经不再是标准 ASCII 字符集了，而称为扩展 ASCII 字符集。扩展 ASCII 字符集并不是一个国际通用的标准，而是一个各自国家使用的标准，比如：编码为 130 的字符，在法语编码中代表了`é`，在希伯来语编码中却代表了字母`ג`等。当然`0~127`所表示的含义还是标准 ASCII 中定义的。只不过扩展 ASCII 编码成为了当时一些国家自己的标准。在一段时间内，大家都各自做各自的工作，相安无事。
 
 
 # GB2312
 终于，计算机普及到中国了，我们中国人都是用汉字来交流的，而不是使用拼音，所以我们也需要一套自己的编码机制。但是此时标准的 ASCII 编码完全不能满足我们的需求，因为没有汉字。当然已有的扩展 ASCII 字符集也没有哪一个可以满足我们的需求。如果我们也学西方国家一样，扩展 ASCII 字符集，形成我们自己的字符集可以吗？不行。因为汉字实在太多了，即使扩展 ASCII 编码，也只是多出来 128 个汉字，所以这个方案也走不通。
 
-注意，我们此时面临的情况是：刚刚引入了 PC，人们需要在电脑上使用中文交流，而不是英文。同时在标准 ASCII 中定义的字符，因为太基础了，所以这些本不属于汉字的符号，我们也要保留下来。带着这个需求，聪明的中国人想出了这样的解决方法：读取文件时一个字符一个字符的判断，如果该字符的值小于 128，那么表明该字符是标准 ASCII 中 的字符，直接显示即可。但是如果读取到第一个大于 128 的字符，那么我们此时不能直接翻译(也翻译不了，此时表明一个汉字的前半个字节)，要再读入下一个字符（注意，汉字的后半个字节也是大于 128 的，这就是 GB2312 定制的标准），将此时读到的这两个字符用来表示一个汉字（前一个表示高位，后一个表示低位，所凑成的数字，我们做一个一对一的映射，使用该数字表示一个汉字），这样我们就能表示大约 6000 个汉字了，这在当时可是极大的解决了人们的需求，因为即便中文汉字多达数万之很多，但是我们平时交流所常用的汉字也就几个个而已。我们把这种编码称为——GB2312。
+注意，我们此时面临的情况是：刚刚引入了 PC，人们需要在电脑上使用中文交流，而不是英文。同时在标准 ASCII 中定义的字符，因为太基础了，所以这些本不属于汉字的符号，我们也要保留下来。带着这个需求，聪明的中国人想出了这样的解决方法：读取文件时一个字符一个字符的判断，如果该字符的值小于 128，那么表明该字符是标准 ASCII 中 的字符，直接显示即可。但是如果读取到第一个大于 128 的字符，那么我们此时不能直接翻译(也翻译不了，此时表明一个汉字的前半个字节)，要再读入下一个字符（注意，汉字的后半个字节也是大于 128 的，这就是 GB2312 定制的标准），将此时读到的这两个字符用来表示一个汉字（前一个表示高位，后一个表示低位，所凑成的数字，我们做一个一对一的映射，使用该数字表示一个汉字），这样我们就能表示大约 6000 个汉字了，这在当时可是极大的解决了人们的需求，因为即便中文汉字多达数万之很多，但是我们平时交流所常用的汉字也就几千个而已。我们把这种编码称为 GB2312。
 
 注意：在 GB2312 中，如果表示的是一个汉字，使用两个字节表示，而且高字节的范围是：`A1~F7`,低字节的范围是： `A1~FE`。
 
@@ -32,7 +32,7 @@ tags: 理解计算机
 # GBK
 但是，随着计算机在中国的普及，使用计算机的人也越来越多，又出现了一个问题，之前用 GB2312 满足不了人们的使用需求了，因为有些很偏的姓氏并不在 GB2312 编码中，这就尴尬了，如果连自己的名字都显示不了，当然是不行的。所以需要一个包含更多汉字的编码方式。
 
-此时我们的需求是：包含尽可能更多的汉字，同时还要完全兼容 GB23121(因为 GB2312 已经开始使用了，如果完全抛弃 GB2312，推出一个全新的编码，那么在新电脑上打开别人用旧电脑发给你文件，显示的就是乱码！)
+此时我们的需求是：包含尽可能更多的汉字，同时还要完全兼容 GB23121(因为 GB2312 已经开始使用了，如果完全抛弃 GB2312，推出一个全新的编码，那么在新电脑上打开别人之前用 GB2312 编码的文件，显示的就是乱码！)
 
 带着这个需求，我们推出了 GBK 编码：照旧一个字符一个字符的判断，如果当前是一个小于 128 的，还是按照标准 ASCII 来显示。如果此时读到一个大于 128 的字符，那么肯定是一个汉字了，但是此时不再想像 GB2312 那样，要求低字节也大于 128 了，从而扩充了编码范围，同时也实现了上面的需求。
 
@@ -44,7 +44,7 @@ tags: 理解计算机
 
 我们使用的计算机都是要安装操作系统的，以微软的 Windows 操作系统为例，相信大家在安装操作系统时，都会遇到选择语言那一栏，例如我们中国人安装时一般选择简体中文，这样我们进入界面后看到的就是中文版本。而 ANSI 编码就是在这时候确定的，具体来说，ANSI 并不是一个具体的编码，而是一种代指，如果你的操作系统选择的语言是简体中文，那么在该系统中，ANSI 所代表的就是 GBK 编码，如果你选择的语言环境是日文，那么 ANSI 代表的就是 Shift_JIS 编码。
 
-而且 ANSI 这个词值在 Windows 系统中出现，Mac 上并没有这种叫法，如果在 Windows 上一个文件被保存为 ANSI 编码，将该文件发送到 Mac 上，打开该文件时，就要使用该文件真正的编码方式，例如中文的 windows 系统，就使用 GB2312 编码在 Mac 上打开该文件。
+而且 ANSI 这个词值在 Windows 系统中出现，Mac 上并没有这种叫法，如果在 Windows 上一个文件被保存为 ANSI 编码，将该文件发送到 Mac 上，打开该文件时，就要使用该文件真正的编码方式，例如中文的 windows 系统，就使用 GBK 编码在 Mac 上打开该文件。
 
 
 # Unicode
